--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-syntax-highlighter": "^15.6.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
