--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "vite": "^5.4.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.4"
   }
 }
