--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "axios-mock-adapter": "^2.1.0",
     "highlight.js": "^11.10.0",
     "moveable": "^0.53.0",
     "react": "^18.3.1",
