changed .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,11 @@
 # For deployment
-USE_VERCEL_KV=false
+USE_VERCEL_KV=true
 PROD_BACKEND_PORT=5005
 # Replace this with your KV_REST_API_URL
 # E.g. https://large-poodle-44208.kv.vercel-storage.com
-KV_REST_API_URL="https://YOUR-URL"
+#KV_REST_API_URL="https://YOUR-URL"
+KV_REST_API_URL="https://tender-platypus-27900.upstash.io"
 # Replace this with your KV_REST_API_TOKEN
 # E.g. AaywASQgOWE4MTVkN2UtODZh...
-KV_REST_API_TOKEN="YOUR-API_TOKEN"
+# KV_REST_API_TOKEN="YOUR-API_TOKEN"
+KV_REST_API_TOKEN="AWz8AAIjcDE4NTMzY2QxNGVmNTA0OTVmYjgxOTgyN2Q4YTkxZDMzY3AxMA"
