--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # For deployment
-USE_VERCEL_KV=True
+USE_VERCEL_KV=true
 PROD_BACKEND_PORT=5005
 # Replace this with your KV_REST_API_URL
 # E.g. https://large-poodle-44208.kv.vercel-storage.com
